--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "Личный проект «Кэт энерджи» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
-    "autoprefixer": "9.5.x",
+    "autoprefixer": "^9.5.1",
     "browser-sync": "^2.26.5",
     "del": "^4.1.1",
-    "gulp": "4.0.x",
+    "gulp": "^4.0.1",
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^5.0.3",
     "gulp-less": "^4.0.1",
